@@ -18,6 +18,14 @@ General
   o Created automatically generated build number, so that it is easier to see
     whether a build is newer or older than an other.
 
+Consumers
+---------
+
+  o FFmpeg consumer:
+    + Fixed long overdue bug where HD material was always recorded using the
+      BT.601 color matrix instead of the BT.709 color matrix. RGB codecs like
+      qtrle was never affected but all the YCbCr based codecs were.
+
 Producers
 ---------
 
